src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "UDEVGothicHS";
  font-display: swap;
  font-style: normal;
  font-weight: normal;
  font-named-instance: "UDEVGothicHS";
  src: url(/fonts/UDEVGothic35HS-Regular-Subset.woff2) format("woff2");
}

@font-face {
  font-family: "UDEVGothicHS";
  font-display: swap;
  font-style: normal;
  font-weight: bold;
  font-named-instance: "UDEVGothicHS";
  src: url(/fonts/UDEVGothic35HS-Bold-Subset.woff2) format("woff2");
}

@font-face {
  font-family: "UDEVGothicHS";
  font-display: swap;
  font-style: italic;
  font-weight: normal;
  font-named-instance: "UDEVGothicHS";
  src: url(/fonts/UDEVGothic35HS-Italic-Subset.woff2) format("woff2");
}

@font-face {
  font-family: "UDEVGothicHS";
  font-display: swap;
  font-style: italic;
  font-weight: bold;
  font-named-instance: "UDEVGothicHS";
  src: url(/fonts/UDEVGothic35HS-BoldItalic-Subset.woff2) format("woff2");
}

:root,
html,
body,
#___gatsby,
#gatsby-focus-wrapper {
  overflow: hidden !important;
}

.scrollable-y {
  overflow-y: auto !important;
}

.header-wrapper {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
}

#content {
  padding-top: calc(70px + 1rem);
}

#footer {
  padding-top: 80px;
  padding-bottom: 80px;
  @screen lg {
    padding-bottom: 1em;
  }
}

div:has(> #toc-modal) {
  z-index: 9999999 !important;
  opacity: unset !important;
}

#___gatsby #gatsby-focus-wrapper * {
  font-family: "UDEVGothicHS", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
}

.contain-paint {
  contain: paint;
}

.smooth-scroll {
  scroll-behavior: smooth;
  scroll-snap-type: y proximity !important;
}

.scroll-padding {
  scroll-padding-top: 70px;
}
.scrollbar-offset {
  padding-left: calc(100vw - 100%);
}

.transform-scaleup-then-hover:hover img,
.transform-scaleup-then-hover:hover transform-scaleup-then-hover-img-wrapper img,
.transform-scaleup-then-hover:hover
  transform-scaleup-then-hover-img-wrapper
  transform-scaleup-then-hover-img-container
  img {
  transition: transform 0.6s ease;
  transform: scale(1.1);
}

#bmc-iframe {
  top: 0;
  right: 0 !important;
  @screen lg {
    right: 18px !important;
  }
  max-height: 100% !important;
  max-width: 100% !important;
}

@media (min-width: 1400px) {
  #bmc-wbtn {
    right: calc((100% - 1400px) / 2) !important;
  }
  #bmc-iframe {
    right: calc((100% - 1400px) / 2) !important;
  }
}

#bmc-close-btn {
  @screen lg {
    display: none !important;
  }
}

